<resources>
    <string name="app_name">Test task</string>
    <string name="title_activity_maps">Map</string>
    <string name="From">Откуда</string>
    <string name="To">Добавить точку</string>
    <string name="Go">Поехали!</string>
    <string name="MyRoutes">Мои маршруты</string>
    <string name="RemovePoint">Удалить точку</string>
    <string name="MaxPoints">Достигнуто максимальное количество точек!</string>
</resources>
